--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,8 @@
 *~
 \#*
-*/target/
-/target/
+.gradle
+target
+build
 *.swp
 .project
 .classpath
@@ -9,5 +10,5 @@
 *.iws
 *.ipr
 *.iml
-.idea/
+.idea
 .DS_Store
