Corrected the scm settings.

--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,8 @@
   </properties>
 
   <scm>
+    <connection>scm:git:git://github.com/neo4j/manual.git</connection>
+    <developerConnection>scm:git:git@github.com:neo4j/manual.git</developerConnection>
     <url>https://github.com/neo4j/manual</url>
   </scm>
 
