Deploy the upgrade info as an artifact.

--- a/pom.xml
+++ b/pom.xml
@@ -244,8 +244,7 @@
           </execution>
           <execution>
             <id>upgrade</id>
-            <!-- disable for now -->
-            <phase>none</phase>
+            <phase>package</phase>
             <goals>
               <goal>single</goal>
             </goals>
