--- a/pom.xml
+++ b/pom.xml
@@ -243,6 +243,21 @@
             </configuration>
           </execution>
           <execution>
+            <id>manpagesenterprise</id>
+            <phase>package</phase>
+            <goals>
+              <goal>single</goal>
+            </goals>
+            <configuration>
+              <descriptors>
+                <descriptor>src/main/assemblies/manpages-enterprise.xml</descriptor>
+              </descriptors>
+              <finalName>${project.artifactId}-${project.version}</finalName>
+              <appendAssemblyId>true</appendAssemblyId>
+              <attach>true</attach>
+            </configuration>
+          </execution>
+          <execution>
             <id>upgrade</id>
             <phase>package</phase>
             <goals>
