changing deps to TBD

--- a/pom.xml
+++ b/pom.xml
@@ -96,9 +96,16 @@
     </dependency>
     <dependency>
       <groupId>org.neo4j</groupId>
-      <artifactId>neo4j-sunshine</artifactId>
+      <artifactId>neo4j-tbd</artifactId>
       <version>${neo4j.version}</version>
       <classifier>docs</classifier>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.neo4j</groupId>
+      <artifactId>neo4j-tbd</artifactId>
+      <version>${neo4j.version}</version>
+      <classifier>test-sources</classifier>
       <scope>provided</scope>
     </dependency>
     <dependency>
