--- a/pom.xml
+++ b/pom.xml
@@ -96,14 +96,14 @@
     </dependency>
     <dependency>
       <groupId>org.neo4j</groupId>
-      <artifactId>neo4j-tbd</artifactId>
+      <artifactId>neo4j-cypher</artifactId>
       <version>${neo4j.version}</version>
       <classifier>docs</classifier>
       <scope>provided</scope>
     </dependency>
     <dependency>
       <groupId>org.neo4j</groupId>
-      <artifactId>neo4j-tbd</artifactId>
+      <artifactId>neo4j-cypher</artifactId>
       <version>${neo4j.version}</version>
       <classifier>test-sources</classifier>
       <scope>provided</scope>
@@ -260,6 +260,7 @@
                 <argument>dist</argument>
                 <argument>VERSION=${project.version}</argument>
                 <argument>IMPORTDIR=${docs.sources}</argument>
+                <argument>VERBOSE=1</argument>
               </arguments>
             </configuration>
           </execution>
