--- a/pom.xml
+++ b/pom.xml
@@ -151,20 +151,20 @@
       <classifier>sources</classifier>
       <scope>provided</scope>
     </dependency>
-    <!-- dependency>
+    <dependency>
       <groupId>org.neo4j.server.plugin</groupId>
       <artifactId>neo4j-gremlin-plugin</artifactId>
       <version>${neo4j-gremlin-plugin.version}</version>
       <classifier>docs</classifier>
       <scope>provided</scope>
-    </dependency -->
-    <!-- dependency>
+    </dependency>
+    <dependency>
       <groupId>org.neo4j.server.plugin</groupId>
       <artifactId>neo4j-cypher-plugin</artifactId>
       <version>${neo4j-cypher-plugin.version}</version>
       <classifier>docs</classifier>
       <scope>provided</scope>
-    </dependency -->
+    </dependency>
   </dependencies>
 
   <build>
