--- a/pom.xml
+++ b/pom.xml
@@ -21,8 +21,6 @@
     <docs.test-sources>${project.build.directory}/test-sources</docs.test-sources>
     <docs.images>${project.build.outputDirectory}/images</docs.images>
     <neo4j.version>1.4.M05</neo4j.version>
-    <neo4j-gremlin-plugin.version>0.1-SNAPSHOT</neo4j-gremlin-plugin.version>
-    <neo4j-cypher-plugin.version>0.1-SNAPSHOT</neo4j-cypher-plugin.version>
   </properties>
 
   <scm>
@@ -154,14 +152,14 @@
     <dependency>
       <groupId>org.neo4j.server.plugin</groupId>
       <artifactId>neo4j-gremlin-plugin</artifactId>
-      <version>${neo4j-gremlin-plugin.version}</version>
+      <version>${neo4j.version}</version>
       <classifier>docs</classifier>
       <scope>provided</scope>
     </dependency>
     <dependency>
       <groupId>org.neo4j.server.plugin</groupId>
       <artifactId>neo4j-cypher-plugin</artifactId>
-      <version>${neo4j-cypher-plugin.version}</version>
+      <version>${neo4j.version}</version>
       <classifier>docs</classifier>
       <scope>provided</scope>
     </dependency>
