--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,7 @@
     <docs.sourcecode>${project.build.directory}/sources</docs.sourcecode>
     <docs.test-sources>${project.build.directory}/test-sources</docs.test-sources>
     <docs.images>${project.build.outputDirectory}/images</docs.images>
-    <neo4j.version>1.4.M06</neo4j.version>
+    <neo4j.version>1.4-SNAPSHOT</neo4j.version>
   </properties>
 
   <scm>
