Adding python docs.

--- a/pom.xml
+++ b/pom.xml
@@ -156,6 +156,20 @@
       <classifier>docs</classifier>
       <scope>provided</scope>
     </dependency>
+    <dependency>
+      <groupId>org.neo4j.drivers</groupId>
+      <artifactId>neo4j-python-embedded</artifactId>
+      <version>${neo4j.version}</version>
+      <classifier>docs</classifier>
+      <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.neo4j.drivers</groupId>
+      <artifactId>neo4j-python-embedded</artifactId>
+      <version>${neo4j.version}</version>
+      <classifier>test-sources</classifier>
+      <scope>provided</scope>
+    </dependency>
   </dependencies>
 
   <build>
