--- a/pom.xml
+++ b/pom.xml
@@ -20,7 +20,7 @@
     <docs.sourcecode>${project.build.directory}/sources</docs.sourcecode>
     <docs.test-sources>${project.build.directory}/test-sources</docs.test-sources>
     <docs.images>${project.build.outputDirectory}/images</docs.images>
-    <neo4j.version>1.4.2</neo4j.version>
+    <neo4j.version>1.5-SNAPSHOT</neo4j.version>
   </properties>
 
   <scm>
@@ -163,7 +163,7 @@
       <classifier>docs</classifier>
       <scope>provided</scope>
     </dependency>
-    <dependency>
+<!--    <dependency>
       <groupId>org.neo4j.drivers</groupId>
       <artifactId>neo4j-python-embedded</artifactId>
       <version>${neo4j.version}</version>
@@ -177,6 +177,7 @@
       <classifier>test-sources</classifier>
       <scope>provided</scope>
     </dependency>
+  -->
   </dependencies>
 
   <build>
