Added title support to queryresult blocks.

--- a/src/bin/resources/queryresult/queryresult.conf
+++ b/src/bin/resources/queryresult/queryresult.conf
@@ -3,7 +3,7 @@
 #
 
 [queryresult-filter-style]
-queryresult-style=template="queryresult-block",filter='queryresult.py'
+queryresult-style=template="queryresult-block",filter='queryresult.py {title?"{title}"}'
 
 [blockdef-listing]
 template::[queryresult-filter-style]
