--- a/pom.xml
+++ b/pom.xml
@@ -42,6 +42,7 @@
       <groupId>org.apache.xmlgraphics</groupId>
       <artifactId>fop</artifactId>
       <version>1.0</version>
+      <scope>provided</scope>
     </dependency>
     <dependency>
       <groupId>org.neo4j</groupId>
