--- a/src/main/resources/conf/asciidoc.conf
+++ b/src/main/resources/conf/asciidoc.conf
@@ -6,6 +6,11 @@ iconsdir=images/icons
 imagesdir=images
 # default syntax highlighter to plain text
 language=plain
+# single and double quotes
+lsquo=&#8216;
+rsquo=&#8217;
+ldquo=&#8220;
+rdquo=&#8221;
 
 [replacements]
 # Replacements performed in order of configuration file entry.  The first entry
@@ -13,6 +18,6 @@ language=plain
 # strips the backslash from the escaped replacement.
 
 # Replace vertical typewriter apostrophe with punctuation apostrophe.
-(\w)'(\w)=\1&#8217;\2
+(\w)'(\w)=\1{rsquo}\2
 (\w)\\'(\w)=\1'\2
 
