--- a/src/main/resources/conf/docbook45.conf
+++ b/src/main/resources/conf/docbook45.conf
@@ -4,6 +4,10 @@
 # Asciidoc DocBook 4.5 configuration file.
 #
 
+[tags]
+singlequoted={lsquo}{1?<phrase role="{1}">}|{1?</phrase>}{rsquo}
+doublequoted={ldquo}{1?<phrase role="{1}">}|{1?</phrase>}{rdquo}
+
 [image-inlinemacro]
 <inlinemediaobject>
   <imageobject>
