--- a/src/bin/resources/dot/dot-filter.conf
+++ b/src/bin/resources/dot/dot-filter.conf
@@ -1,6 +1,6 @@
 
 [dot-filter-style]
-dot-style=template="dot-block",subs=(),posattrs=("style","target","colorset"),filter='dot.sh "target/classes/images/{target}" {colorset?{colorset}}'
+dot-style=template="dot-block",subs=(),posattrs=("style","target","colorset"),filter='dot.sh "src/bin/fonts" "target/classes/images/{target}" {colorset?{colorset}}'
 
 [blockdef-listing]
 template::[dot-filter-style]
