--- a/pom.xml
+++ b/pom.xml
@@ -512,6 +512,42 @@
         </plugins>
       </build>
     </profile>
+    <profile>
+      <id>annotated</id>
+      <activation>
+        <activeByDefault>false</activeByDefault>
+        <property>
+          <name>annotated</name>
+        </property>
+      </activation>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.codehaus.mojo</groupId>
+            <artifactId>exec-maven-plugin</artifactId>
+            <executions>
+              <execution>
+                <id>execute-asciidoc</id>
+                <phase>compile</phase>
+                <goals>
+                  <goal>exec</goal>
+                </goals>
+                <configuration>
+                  <executable>make</executable>
+                  <arguments>
+                    <argument>annotated</argument>
+                    <argument>VERSION=${project.version}</argument>
+                    <argument>IMPORTDIR=${docs.sources}</argument>
+                    <argument>KEEP=1</argument>
+                    <argument>VERBOSE=1</argument>
+                  </arguments>
+                </configuration>
+              </execution>
+            </executions>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
   </profiles>
 
   <distributionManagement>
