--- a/pom.xml
+++ b/pom.xml
@@ -595,7 +595,7 @@
 		<repository>
 		<id>neo4j-release-repository</id>
 		<name>Neo4j Maven 2 release repository</name>
-		<url>http://m2.neo4j.org/releases</url>
+		<url>https://m2.neo4j.org/content/repositories/releases</url>
 		<releases>
 			<enabled>true</enabled>
 		</releases>
