Get different filter output from the xhtml11 backend.

--- a/src/bin/extensions/filters/dot/dot-filter.conf
+++ b/src/bin/extensions/filters/dot/dot-filter.conf
@@ -9,9 +9,10 @@ template::[dot-filter-style]
 template::[dot-filter-style]
 
 [dot-block]
-ifndef::backend-html,backend-deckjs[]
+ifndef::backend-html,backend-xhtml11,backend-deckjs[]
 template::[filter-image-blockmacro]
 endif::[]
-ifdef::backend-html,backend-deckjs[]
-<img alt="{title?{title}}" src="images/{target}">
+ifdef::backend-html,backend-xhtml11,backend-deckjs[]
+<img alt="{title?{title}}" src="{imagesdir}/{target}">
 endif::[]
+
