--- a/src/bin/extensions/filters/snippet/snippet.conf
+++ b/src/bin/extensions/filters/snippet/snippet.conf
@@ -4,7 +4,7 @@
 
 [snippet-filter-style]
 snippet-style=template="snippet-block",posattrs=("style","language"),filter='snippet.py'
-ifdef::backend-html,backend-deckjs[]
+ifdef::backend-html,backend-xhtml11,backend-deckjs[]
 snippet-style=template="snippet-block",posattrs=("style","language"),filter='snippet.py --raw'
 endif::[]
 
@@ -13,4 +13,14 @@ endif::[]
 template::[snippet-filter-style]
 
 [snippet-block]
+ifndef::backend-html,backend-xhtml11,backend-deckjs[]
 template::[source-highlight-block]
+endif::[]
+ifdef::backend-html,backend-xhtml11,backend-deckjs[]
+<div class="listingblock"><div class="content">
+<pre class="programlisting brush: {language}">
+|
+</pre>
+</div></div>
+endif::[]
+
