Support html output for queryresults.

--- a/src/bin/extensions/filters/console/console.conf
+++ b/src/bin/extensions/filters/console/console.conf
@@ -4,17 +4,17 @@
 
 [console-filter-style]
 console-style=template="console-block",filter='console.py "{console}" --docbook {title?"{title}"}'
-ifdef::backend-deckjs[]
+ifdef::backend-html,backend-xhtml11,backend-deckjs[]
 console-style=template="console-block",filter='console.py "{console}" --html {title?"{title}"}'
-endif::backend-deckjs[]
+endif::[]
 
 [blockdef-listing]
 template::[console-filter-style]
 
 [console-block]
-ifndef::backend-deckjs[]
+ifndef::backend-html,backend-xhtml11,backend-deckjs[]
 template::[openblock]
-endif::backend-deckjs[]
-ifdef::backend-deckjs[]
+endif::[]
+ifdef::backend-html,backend-xhtml11,backend-deckjs[]
 |
-endif::backend-deckjs[]
+endif::[]
