--- a/src/bin/extensions/filters/queryresult/queryresult.conf
+++ b/src/bin/extensions/filters/queryresult/queryresult.conf
@@ -3,12 +3,13 @@
 #
 
 [queryresult-filter-style]
-queryresult-style=template="queryresult-block",filter='queryresult.py {title?"{title}"}'
+queryresult-style=template="queryresult-block",filter='queryresult.py --docbook {title?"{title}"}'
+ifdef::backend-html,backend-xhtml11,backend-deckjs[]
+queryresult-style=template="queryresult-block",filter='queryresult.py --html {title?"{title}"}'
+endif::[]
 
 [blockdef-listing]
 template::[queryresult-filter-style]
 
 [queryresult-block]
 template::[openblock]
-
-
