Made the configsetting filter handle direct html output as well, which means all filters do that now.

--- a/src/bin/extensions/filters/configsetting/configsetting.conf
+++ b/src/bin/extensions/filters/configsetting/configsetting.conf
@@ -3,7 +3,10 @@
 #
 
 [configsetting-filter-style]
-configsetting-style=template="configsetting-block",presubs=("specialcharacters","replacements"),posattrs=("style", "type"),filter='configsetting.py "{title}" {type?{type}}'
+configsetting-style=template="configsetting-block",presubs=("specialcharacters","replacements"),posattrs=("style", "type"),filter='configsetting.py "{title}" --docbook {type?{type}}'
+ifdef::backend-html,backend-xhtml11,backend-deckjs[]
+configsetting-style=template="configsetting-block",presubs=("specialcharacters","replacements"),posattrs=("style", "type"),filter='configsetting.py "{title}" --html {type?{type}}'
+endif::[]
 
 [blockdef-listing]
 template::[configsetting-filter-style]
