Override original source highlight filter. Added CSS and JS resources.

--- a/pom.xml
+++ b/pom.xml
@@ -78,6 +78,7 @@
           <excludes>
             <exclude>src/bin/asciidoc/**</exclude>
             <exclude>src/bin/extensions/backends/**</exclude>
+            <exclude>src/main/resources/js/**</exclude>
           </excludes>
         </configuration>
       </plugin>
