Added zh-CN translation for generated elements.

--- a/src/bin/asciidoc/lang-zh-CN.conf
+++ b/src/bin/asciidoc/lang-zh-CN.conf
@@ -7,18 +7,18 @@
 # Captions on RHS are displayed in outputs.
 ifdef::basebackend-html[]
 
-caution-caption=Caution
-important-caption=Important
-note-caption=Note
-tip-caption=Tip
-warning-caption=Warning
-figure-caption=Figure
-table-caption=Table
-example-caption=Example
-toc-title=Table of Contents
-appendix-caption=Appendix
+caution-caption=小心
+important-caption=重要
+note-caption=注意
+tip-caption=提示
+warning-caption=警告
+figure-caption=图
+table-caption=表
+example-caption=例
+toc-title=目录
+appendix-caption=附录
 # Man page NAME section title.
-manname-title=NAME
+manname-title=名称
 
 [footer-text]
 Version {revnumber}{basebackend-xhtml11?<br />}{basebackend-xhtml11=<br>}
@@ -33,22 +33,22 @@ endif::basebackend-html[]
 ifdef::basebackend-docbook[]
 
 ifdef::doctype-article[]
-^Abstract$=abstract
+^Abstract$=摘要
 endif::doctype-article[]
 
 ifdef::doctype-book[]
-^Colophon$=colophon
-^Dedication$=dedication
-^Preface$=preface
+^Colophon$=后记
+^Dedication$=题词
+^Preface$=前言
 endif::doctype-book[]
 
-^Index$=index
-^(Bibliography|References)$=bibliography
-^Glossary$=glossary
-^Appendix [A-Z][:.](?P<title>.*)$=appendix
+^Index$=索引
+^(Bibliography|References)$=参考书目
+^Glossary$=术语表
+^Appendix [A-Z][:.](?P<title>.*)$=附录
 
 endif::basebackend-docbook[]
 
 ifdef::doctype-manpage[]
-(?i)^SYNOPSIS$=synopsis
+(?i)^SYNOPSIS$=大纲
 endif::doctype-manpage[]
