--- a/src/bin/extensions/filters/dot/dot-filter.conf
+++ b/src/bin/extensions/filters/dot/dot-filter.conf
@@ -9,10 +9,9 @@ template::[dot-filter-style]
 template::[dot-filter-style]
 
 [dot-block]
-ifndef::backend-html,backend-xhtml11,backend-deckjs[]
+ifndef::backend-deckjs[]
 template::[filter-image-blockmacro]
 endif::[]
-ifdef::backend-html,backend-xhtml11,backend-deckjs[]
+ifdef::backend-deckjs[]
 <img alt="{title?{title}}" src="{imagesdir}/{target}">
 endif::[]
-
