--- a/pom.xml
+++ b/pom.xml
@@ -77,6 +77,7 @@
         <configuration>
           <excludes>
             <exclude>src/bin/asciidoc/**</exclude>
+            <exclude>src/bin/po4a/**</exclude>
             <exclude>src/bin/extensions/backends/**</exclude>
             <exclude>src/main/resources/js/**</exclude>
           </excludes>
