Fixed issue with including XML source snippets.

--- a/src/bin/extensions/filters/source/source-highlight-filter.conf
+++ b/src/bin/extensions/filters/source/source-highlight-filter.conf
@@ -58,13 +58,13 @@ endif::basebackend-docbook[]
 # Source styles template.
 ifdef::basebackend-html[]
 [source-filter-style]
-source-style=template="source-highlight-block",presubs=(),postsubs=("callouts",),posattrs=("style","language","src_numbered","src_tab")
+source-style=template="source-highlight-block",presubs=(),postsubs=("specialcharacters","callouts",),posattrs=("style","language","src_numbered","src_tab")
 endif::basebackend-html[]
 
 ifdef::basebackend-html4[]
 [source-filter-style]
 # html4 does not use pygments.
-source-style=template="source-highlight-block",presubs=(),postsubs=("callouts",),posattrs=("style","language","src_numbered","src_tab")
+source-style=template="source-highlight-block",presubs=(),postsubs=("specialcharacters","callouts",),posattrs=("style","language","src_numbered","src_tab")
 endif::basebackend-html4[]
 
 ifdef::basebackend-docbook[]
