Fixed handling of source block without a language set.

--- a/src/bin/extensions/filters/source/source-highlight-filter.conf
+++ b/src/bin/extensions/filters/source/source-highlight-filter.conf
@@ -30,7 +30,8 @@ ifdef::basebackend-html[]
 <div class="listingblock">
 <a id="{id}"></a>
 <div class="title">{caption=}{title}</div>
-<pre class="programlisting brush: {language}">
+ifdef::language[<pre class="programlisting brush: {language}">]
+ifndef::language[<pre class="programlisting brush: plain">]
 |
 </pre></div>
 endif::basebackend-html[]
@@ -40,7 +41,8 @@ ifdef::basebackend-xhtml11,basebackend-html5[]
 <div class="listingblock">
 <a id="{id}"></a>
 <div class="title">{caption=}{title}</div>
-<pre class="programlisting brush: {language}">
+ifdef::language[<pre class="programlisting brush: {language}">]
+ifndef::language[<pre class="programlisting brush: plain">]
 |
 </pre></div>
 endif::basebackend-xhtml11,basebackend-html5[]
