Made html5 build configurable. Enabled refcard to output docbook. Upgraded to FOP 1.1.

--- a/src/bin/extensions/filters/refcard/refcard.conf
+++ b/src/bin/extensions/filters/refcard/refcard.conf
@@ -3,10 +3,18 @@
 #
 
 [refcard-filter-style]
-refcard-style=template="refcard-block",presubs=("specialcharacters","replacements"),filter='refcard.py {title?"{title}"}'
+refcard-style=template="refcard-block",presubs=("specialcharacters","replacements"),filter='refcard.py --docbook {title?"{title}"}'
+ifdef::backend-html5,backend-deckjs[]
+refcard-style=template="refcard-block",presubs=("specialcharacters","replacements"),filter='refcard.py --html {title?"{title}"}'
+endif::[]
 
 [blockdef-listing]
 template::[refcard-filter-style]
 
 [refcard-block]
+ifndef::backend-html5,backend-deckjs[]
+|
+endif::[]
+ifdef::backend-html5,backend-deckjs[]
 <div class="col"><div class="blk">|</div></div>
+endif::[]
