Improved the HTML5 support in plugins and CSS. Added error checks on the manpage build output. Added admonition icons. Fixed problems with the make context for the manual.

--- a/src/bin/extensions/filters/configsetting/configsetting.conf
+++ b/src/bin/extensions/filters/configsetting/configsetting.conf
@@ -4,7 +4,7 @@
 
 [configsetting-filter-style]
 configsetting-style=template="configsetting-block",presubs=("specialcharacters","replacements"),posattrs=("style", "type"),filter='configsetting.py "{title}" --docbook {type?{type}}'
-ifdef::backend-html,backend-xhtml11,backend-deckjs[]
+ifdef::backend-html,backend-html5,backend-xhtml11,backend-deckjs[]
 configsetting-style=template="configsetting-block",presubs=("specialcharacters","replacements"),posattrs=("style", "type"),filter='configsetting.py "{title}" --html {type?{type}}'
 endif::[]
 
@@ -12,6 +12,10 @@ endif::[]
 template::[configsetting-filter-style]
 
 [configsetting-block]
+ifndef::backend-html,backend-html5,backend-xhtml11,backend-deckjs[]
 template::[openblock]
-
+endif::[]
+ifdef::backend-html,backend-html5,backend-xhtml11,backend-deckjs[]
+|
+endif::[]
 
