--- a/src/bin/extensions/filters/console/console.conf
+++ b/src/bin/extensions/filters/console/console.conf
@@ -4,7 +4,7 @@
 
 [console-filter-style]
 console-style=template="console-block",filter='console.py "{console}" --docbook {title?"{title}"}'
-ifdef::backend-html,backend-xhtml11,backend-deckjs[]
+ifdef::backend-html,backend-html5,backend-xhtml11,backend-deckjs[]
 console-style=template="console-block",filter='console.py "{console}" --html {title?"{title}"}'
 endif::[]
 
@@ -12,9 +12,9 @@ endif::[]
 template::[console-filter-style]
 
 [console-block]
-ifndef::backend-html,backend-xhtml11,backend-deckjs[]
+ifndef::backend-html,backend-html5,backend-xhtml11,backend-deckjs[]
 template::[openblock]
 endif::[]
-ifdef::backend-html,backend-xhtml11,backend-deckjs[]
+ifdef::backend-html,backend-html5,backend-xhtml11,backend-deckjs[]
 |
 endif::[]
