--- a/src/bin/extensions/filters/queryresult/queryresult.conf
+++ b/src/bin/extensions/filters/queryresult/queryresult.conf
@@ -4,7 +4,7 @@
 
 [queryresult-filter-style]
 queryresult-style=template="queryresult-block",filter='queryresult.py --docbook {title?"{title}"}'
-ifdef::backend-html,backend-xhtml11,backend-deckjs[]
+ifdef::backend-html,backend-html5,backend-xhtml11,backend-deckjs[]
 queryresult-style=template="queryresult-block",filter='queryresult.py --html {title?"{title}"}'
 endif::[]
 
