--- a/src/bin/extensions/filters/snippet/snippet.conf
+++ b/src/bin/extensions/filters/snippet/snippet.conf
@@ -5,7 +5,7 @@
 [snippet-filter-style]
 snippet-style=template="snippet-block",posattrs=("style","language"),filter='snippet.py'
 ifdef::backend-html,backend-html5,backend-xhtml11,backend-deckjs[]
-snippet-style=template="snippet-block",posattrs=("style","language"),filter='snippet.py --raw'
+snippet-style=template="snippet-block",presubs=(),postsubs=("specialcharacters",),posattrs=("style","language"),filter='snippet.py --raw'
 endif::[]
 
 [blockdef-listing]
