--- a/src/bin/extensions/filters/refcard/refcard.conf
+++ b/src/bin/extensions/filters/refcard/refcard.conf
@@ -3,9 +3,9 @@
 #
 
 [refcard-filter-style]
-refcard-style=template="refcard-block",presubs=("specialcharacters","replacements"),filter='refcard.py --docbook {title?"{title}"}'
+refcard-style=template="refcard-block",filter='refcard.py --docbook {title?"{title}"}'
 ifdef::backend-html5,backend-deckjs[]
-refcard-style=template="refcard-block",presubs=("specialcharacters","replacements"),filter='refcard.py --html {title?"{title}"}'
+refcard-style=template="refcard-block",filter='refcard.py --html {title?"{title}"}'
 endif::[]
 
 [blockdef-listing]
