Enable adding css classes to refcards.

--- a/src/bin/extensions/filters/refcard/refcard.conf
+++ b/src/bin/extensions/filters/refcard/refcard.conf
@@ -16,5 +16,5 @@ ifndef::backend-html5,backend-deckjs[]
 |
 endif::[]
 ifdef::backend-html5,backend-deckjs[]
-<div class="col"><div class="blk">|</div></div>
+<div class="col card{cardcss?{cardcss}}"><div class="blk">|</div></div>
 endif::[]
