Remove console for PDF output. Stop producing PNGs from Graphviz.

--- a/src/bin/extensions/filters/console/console.conf
+++ b/src/bin/extensions/filters/console/console.conf
@@ -7,6 +7,9 @@ console-style=template="console-block",filter='console.py "{console}" --docbook 
 ifdef::backend-html,backend-html5,backend-xhtml11,backend-deckjs[]
 console-style=template="console-block",filter='console.py "{console}" --html {title?"{title}"}'
 endif::[]
+ifdef::nonhtmloutput[]
+console-style=template="console-block",filter='console.py "{console}" --empty {title?"{title}"}'
+endif::[]
 
 [blockdef-listing]
 template::[console-filter-style]
