Better support for mobile. Added DTD and schema for DocBook 4.5.

--- a/pom.xml
+++ b/pom.xml
@@ -102,6 +102,7 @@ the relevant Commercial Agreement.
             <exclude>src/bin/extensions/backends/**</exclude>
             <exclude>src/main/resources/js/**</exclude>
             <exclude>src/main/resources/common/**</exclude>
+            <exclude>src/main/resources/docbook-dtd/**</exclude>
           </excludes>
         </configuration>
       </plugin>
