--- a/src/bin/extensions/filters/source/source-highlight-filter.conf
+++ b/src/bin/extensions/filters/source/source-highlight-filter.conf
@@ -51,7 +51,8 @@ endif::basebackend-xhtml11,basebackend-html5[]
 ifdef::basebackend-docbook[]
 [source-highlight-block]
 <formalpara{id? id="{id}"}{role? role="{role}"}{reftext? xreflabel="{reftext}"}><title>{title}</title><para>
-<programlisting language="{language}" linenumbering="{src_numbered=unnumbered}"{args? {args}}>
+ifdef::language[<programlisting language="{language}" linenumbering="{src_numbered=unnumbered}"{args? {args}}>]
+ifndef::language[<programlisting linenumbering="{src_numbered=unnumbered}"{args? {args}}>]
 |
 </programlisting>
 {title#}</para></formalpara>
