--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
   </parent>
   <groupId>org.neo4j.build.plugins</groupId>
   <artifactId>neo4j-doctools</artifactId>
-  <version>25-SNAPSHOT</version>
+  <version>25</version>
   <name>Neo4j - Documentation Tools</name>
   <description>Neo4j Documentation Tools.</description>
   <url>http://components.neo4j.org/${project.artifactId}/${project.version}</url>
